--- a/Basics/learn.html
+++ b/Basics/learn.html
@@ -183,10 +183,10 @@
         </p>
 
     </details>
-    <script src="/Learning/DOM.js"></script>
-    <script src="/Learning/Event.js"></script>
-    <script src="/Learning/prototype.js"></script>
-    <script src="/LearningJavaScript/Classes.js"></script>
+    <script src="./DOM.js"></script>
+    <script src="./Event.js"></script>
+    <script src="./prototype.js"></script>
+    <script src="./Classes.js"></script>
 
 </body>
 
