--- a/Basics/learn.html
+++ b/Basics/learn.html
@@ -16,10 +16,11 @@
         Click Me 😄
     </div>
     <ul id="baap">
+        <h5>Greetings</h5>
         <li id="beta">
             Hi
         </li>
-        <li id="beta">
+        <li>
             Hello
         </li>
     </ul>
