--- a/Basics/learn.html
+++ b/Basics/learn.html
@@ -23,6 +23,9 @@
         <li>
             Hello
         </li>
+        <li>
+            <a href="https://www.google.com" id="web">google</a>
+        </li>
     </ul>
     <details>
         <summary>Event Description</summary>
@@ -190,7 +193,6 @@
             PointerEvent
         </code>
         </p>
-
     </details>
     <script src="./DOM.js"></script>
     <script src="./Event.js"></script>
