--- a/Basics/learn.html
+++ b/Basics/learn.html
@@ -1,204 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/Learning/learn.css">
-</head>
+<html>
 
 <body>
-    <div id="box1">Hi</div>
-    <h1 id="welcome-msg">Welcome</h1>
-    <div id="event">
-        Click Me 😄
+    <div id="grandparent">Grandparent
+        <div id="parent">Parent
+            <div id="child">Child</div>
+        </div>
     </div>
-    <ul id="baap">
-        <h5>Greetings</h5>
-        <li id="beta">
-            Hi
-        </li>
-        <li>
-            Hello
-        </li>
-        <li>
-            <a href="https://www.google.com" id="web">google</a>
-        </li>
-    </ul>
-    <details>
-        <summary>Event Description</summary>
-        <p>
-            <code>
-            PointerEvent {isTrusted: true, pointerId: 1, width: 1, height: 1, pressure: 0, …}
-            isTrusted
-            :
-            true
-            altKey
-            :
-            false
-            altitudeAngle
-            :
-            1.5707963267948966
-            azimuthAngle
-            :
-            0
-            bubbles
-            :
-            true
-            button
-            :
-            0
-            buttons
-            :
-            0
-            cancelBubble
-            :
-            false
-            cancelable
-            :
-            true
-            clientX
-            :
-            144
-            clientY
-            :
-            362
-            composed
-            :
-            true
-            ctrlKey
-            :
-            false
-            currentTarget
-            :
-            null
-            defaultPrevented
-            :
-            false
-            detail
-            :
-            1
-            eventPhase
-            :
-            0
-            fromElement
-            :
-            null
-            height
-            :
-            1
-            isPrimary
-            :
-            false
-            layerX
-            :
-            144
-            layerY
-            :
-            362
-            metaKey
-            :
-            false
-            movementX
-            :
-            0
-            movementY
-            :
-            0
-            offsetX
-            :
-            136
-            offsetY
-            :
-            247
-            pageX
-            :
-            144
-            pageY
-            :
-            362
-            pointerId
-            :
-            1
-            pointerType
-            :
-            "mouse"
-            pressure
-            :
-            0
-            relatedTarget
-            :
-            null
-            returnValue
-            :
-            true
-            screenX
-            :
-            144
-            screenY
-            :
-            443
-            shiftKey
-            :
-            false
-            sourceCapabilities
-            :
-            InputDeviceCapabilities {firesTouchEvents: false}
-            srcElement
-            :
-            div#event
-            tangentialPressure
-            :
-            0
-            target
-            :
-            div#event
-            tiltX
-            :
-            0
-            tiltY
-            :
-            0
-            timeStamp
-            :
-            5509
-            toElement
-            :
-            null
-            twist
-            :
-            0
-            type
-            :
-            "click"
-            view
-            :
-            Window {window: Window, self: Window, document: document, name: '', location: Location, …}
-            which
-            :
-            1
-            width
-            :
-            1
-            x
-            :
-            144
-            y
-            :
-            362
-            [[Prototype]]
-            :
-            PointerEvent
-        </code>
-        </p>
-    </details>
-    <script src="./DOM.js"></script>
-    <script src="./Event.js"></script>
-    <script src="./prototype.js"></script>
-    <script src="./Classes.js"></script>
 
+    <script>
+        document.getElementById('grandparent').addEventListener('click', () => console.log('Grandparent clicked!'), true); // Capturing
+        document.getElementById('parent').addEventListener('click', () => console.log('Parent clicked!'));
+        document.getElementById('child').addEventListener('click', () => console.log('Child clicked!'));
+    </script>
 </body>
 
 </html>
